package com.vanskarner.movie.domain.ds;

import java.util.List;

public class MoviesDS {

    public List<MovieDS> list;

    public MoviesDS(List<MovieDS> list) {
        this.list = list;
    }

}