@startuml
!include ../StylesForDiagrams.puml

title EXPOSURE OF MOVIE SERVICE\n Branch: package_by_layer

interface MovieServices<<interface>>
class MovieDetailDS<<(D,orange)Data Structure>>
class MovieBasicDS<<(D,orange)Data Structure>>
class MoviesDS<<(D,orange)Data Structure>>
class MoviesFilterDS<<(D,orange)Data Structure>>
exception MovieError<<abstract>>
exception FavoriteLimitError
exception RemoteError<<abstract>>
exception Unauthorised
exception NotFound
exception Server
exception ServiceUnavailable
exception NoInternet

MovieServices ..> MoviesDS
MovieServices ..> MovieDetailDS
MovieServices ..> MoviesFilterDS
MovieDetailDS --> MovieBasicDS
MoviesDS --> "0..*" MovieBasicDS
MoviesFilterDS --> "0..*" MovieBasicDS
MoviesFilterDS --> "0..*" MovieBasicDS
MovieError <|-- FavoriteLimitError
RemoteError <|-- NoInternet
RemoteError <|-- NotFound
RemoteError <|-- Server
RemoteError <|-- ServiceUnavailable
RemoteError <|-- Unauthorised

hide members
@enduml